--- a/templates/JavaScript.xml
+++ b/templates/JavaScript.xml
@@ -26,4 +26,20 @@
       <option name="JS_STATEMENT" value="true" />
     </context>
   </template>
+  <template name="ready" value="$(document).ready(function() {&#10;    $END$&#10;});" toReformat="true" toShortenFQNames="true">
+    <context>
+      <option name="JAVA_SCRIPT" value="true" />
+      <option name="JS_EXPRESSION" value="true" />
+      <option name="JSX_HTML" value="true" />
+      <option name="JS_STATEMENT" value="true" />
+    </context>
+  </template>
+  <template name="submit" value="$(document).submit(function() {&#10;    $END$&#10;});" toReformat="true" toShortenFQNames="true">
+    <context>
+      <option name="JAVA_SCRIPT" value="true" />
+      <option name="JS_EXPRESSION" value="true" />
+      <option name="JSX_HTML" value="true" />
+      <option name="JS_STATEMENT" value="true" />
+    </context>
+  </template>
 </templateSet>
