--- a/templates/user.xml
+++ b/templates/user.xml
@@ -16,4 +16,14 @@
       <option name="JS_STATEMENT" value="true" />
     </context>
   </template>
+  <template name="switch(" value="switch($EXP$) {&#10;    case $VAL$:&#10;        $END$&#10;        break;&#10;    default:&#10;}" toReformat="true" toShortenFQNames="true">
+    <variable name="EXP" expression="" defaultValue="" alwaysStopAt="true" />
+    <variable name="VAL" expression="" defaultValue="" alwaysStopAt="true" />
+    <context>
+      <option name="JAVA_SCRIPT" value="true" />
+      <option name="JS_EXPRESSION" value="true" />
+      <option name="JSX_HTML" value="true" />
+      <option name="JS_STATEMENT" value="true" />
+    </context>
+  </template>
 </templateSet>
